--- a/style.css
+++ b/style.css
@@ -26,4 +26,13 @@ display: block;
 img {
     width: 50px;
     height:55px;
+
+}
+header{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(68, 68, 68);
+    padding: 10px 20px;
+
 }
