--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h3 {
     width: auto;
     padding: 20px;
     box-shadow: 0 4px 8px o rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    display: flex;
+display: flex;
 
 }
 
@@ -129,21 +129,36 @@ h3 {
     margin-left: 20px;
     padding: 60px;
 }
-
-#headteacher{
-    
+.headteacher_image{
+    width: 200px;
+    height:auto;
+    animation-name: anim;
+    animation-duration: 2s;
+    animation-iteration-count: 2;
+    animation-play-state: running;
+    animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+    animation-direction: normal;
     padding-left: 0;
 }
+@keyframes anim{
+    100%{transform: scale(0.5,0.5);}
+}
 
-/*.headteacher_image{
-    padding-left: 0px;
-}*/
-
-.content{
+.content.open-sans{
     margin-top: 20px;
     text-align: justify;
     text-justify: inter-word;
     flex: 1;
+    background-color: rgba(25, 124, 25, 0.918);
+    animation-name: grow;
+    animation-duration: 2s;
+    animation-iteration-count: 2;
+    animation-play-state: running;
+    animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+    animation-direction: normal;
+}
+@keyframes grow {
+    100%{transform: scale(2,2);}
     
 }
 
@@ -189,3 +204,134 @@ h3 {
     height: auto;
     text-align: center;
 }
+.slider{
+    width: 100%;
+    height:500px;
+    overflow: hidden;
+    background-color:lightgray;
+    text-align: center;
+    padding: 40px 20px;
+    
+}
+.slider h2{
+    font-weight: bold;
+}
+figure{
+    position: relative;
+    left: 0;
+    width: 400%;
+    animation: 10s flow infinite;
+    
+    
+}
+.sliden{
+    height: 25%;
+    width: 25%;
+    float: left;
+    border-radius: 10px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 600px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: #fff;
+    margin: 20px 0;
+    
+}
+@keyframes flow{
+    0%{
+        left: 0;
+    }
+    10%{
+        left: 0;
+    }
+    20%{
+        left: -100%;
+    }
+    30%{
+        left: -100%;
+    }
+    40%{
+        left: -200%;
+    }
+    50%{
+        left: -200%;
+    }
+    55%{
+        left: -300%;
+    }
+    65%{
+        left: -300%;
+    }
+    75%{
+        left: -200%;
+    }
+    75%{
+        left: -100%;
+    }
+    85%{
+        left: -100%;
+    }
+    90%{
+        left: 0;
+    }
+    100%{
+        left: 0;
+    }
+
+}
+.testimonial-content {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 15px;
+  font-style: italic;
+}
+.testimonial-author {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+  }
+  /*for the news and events page*/
+  #news-h1{
+    text-align: center;
+  }
+  .news{
+    display: flex;
+    justify-content: space-between;
+  }
+  .news-content{
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 600px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: #fff;
+    margin: 20px 0;
+  }
+  .news-content:hover{
+    background-color: lightgreen;
+  }
+  .form{
+    display: flex;
+    justify-content: space-between;
+  }
+  #thank{
+    border-radius: 10px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+  }
+  .form-content{
+    margin-left: 10px;
+  }
