--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ header{
     align-items: end;
     justify-content: space-between;
     background-color: rgba(246, 42, 42,0.5);
-    opacity: 0.5;
     padding: 10px 20px;
     top: 0;
+    overflow: hidden;
 
 }
 
@@ -35,28 +35,61 @@ header{
   }
 
 /*Navigation bar*/
-.navbar ul{
-    list-style-type:none;
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-}
+
 
 .navbar a{
 color: white;
 text-decoration: none;
 padding: 15px;
 text-align: center;
-display: block;
+float: right;
 }
 
-.navbar a:hover{
-   text-decoration: underline;
-   color: grey;
+.navbar a:hover, .dropdown:hover .dropdown-butn{
+   /*text-decoration: underline;*/
+   color: rgb(10, 87, 211);
 }
 
-.navbar li{
-   float: left;
+
+/*dropdown*/
+.dropdown{
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropdown-butn{
+    font-size: 16px;
+    border: none;
+    outline: none;
+    margin: 0;
+    padding: 15px;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a{
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover{
+    background-color: #ddd;
+    display: flex;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
 }
 
 /*School badge, name and motto*/
@@ -115,36 +148,33 @@ h3 {
     color: white;
 }
 
+
 /*Headteacher's Greetings*/
 .card{
     width: auto;
     padding: 20px;
     box-shadow: 0 4px 8px o rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    display: flex;
-
+    background-color: #ddd;
+    
 }
 
 #greeting{
     margin-top: 50px;
     margin-left: 20px;
     padding: 60px;
+    background-color: rosybrown;
 }
 
 #headteacher{
-    
-    padding-left: 0;
+    float: left;
+    margin-right: 20px;
+   
 }
-
-/*.headteacher_image{
-    padding-left: 0px;
-}*/
 
 .content{
     margin-top: 20px;
     text-align: justify;
-    text-justify: inter-word;
-    flex: 1;
-    
+    text-justify: inter-word; 
 }
 
 /*Footer*/
