--- a/style.css
+++ b/style.css
@@ -1,19 +1,179 @@
+*{
+    box-sizing: border-box;
+}
+
 header{
     display:flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(246, 42, 42,0.5);
-    padding: 10px 20px;
-    top: 0;
-    overflow: visible;
+    padding: 20px 20px;
+    height: 90px;
+    max-width: 100%;
+}
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
+header, footer{
+    background-color: rgb(211, 39, 39);
+}
+
+
+/*School badge, name and motto
+.school-heading {
+    text-align: center;
+    color: whitesmoke;
+   /* text-shadow: 3px 3px 5px rgb(41, 10, 10);
+}
+*/
+.logo {
+    width: 50px;
+    height:auto;
+    margin-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    align-items: center;
+
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    vertical-align: middle;
+}
+
+.info{
+    display: flex;
+    align-items: center;
+}
+
+.name{
+    margin-bottom: 0;
+    color: whitesmoke;
+}
+
+.motto{
+    margin-top: 0;
+    color: whitesmoke;
+}
+
+
+/*DropDown*/
+.navbar>ul>li>ul.dropdown>li>a{
+    display: block;
+    color: black;
+}
+
+.navbar ul li ul.dropdown{
+    width: 100%;
+    background-color: #eee;
+    position: absolute;
+    z-index:9999;
+    display: none;
+    top: 100%;
+}
+
+.navbar li:hover ul.dropdown{
+    display: block;
+}
+
+.navbar ul li{
+    position: relative;
+    display: inline-block;
+}
+
+.navbar ul{
+    padding: 0;
+    margin: 0;
+}
+
+.navbar ul li ul.dropdown li a:hover{
+    background-color: #ccc;
+
+}
+
+
+/*Navigation bar*/
+.navbar{
+    padding: 0;
+    height: 90px;
+    position: relative;
+    z-index: 1000;
+}
+
+.navbar ul li a{
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    text-align: center;
+    float: right;
+    /*position: relative;*/
+    color:#E5E4E2;
+    display: block;
+    
+    }
+    
+.navbar ul li a:hover{
+        color: white;
+        display: inline-block;
+    
+    }
+   
+   /*Transition*/ 
+.navbar>ul>li>a::after{
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 1px;
+        left: 0;
+        bottom: 0;
+        background-color: white;
+        transition: width 0.5s ease-out;
+    }
+    
+.navbar>ul>li>a:hover::after{
+        width: 100%;
+    }
+    
+.navbar>ul{
+        list-style-type:none;
+        margin: 0px;
+        padding-top: 25px;
+    }
+    
+
+/*Cover Image*/
+
+.cover-container{
+    position: relative;
+    max-width: 100%;
+}
+
+.cover-container::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 600px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover-img{
+    height: 600px;
+    width: 100vw;
+    display: block;
+    object-fit: cover;
+    
 }
 
 /*Font-Families*/
 .montserrat {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 500;
     font-style: normal;
   }
 
@@ -34,104 +194,6 @@ header{
       "wdth" 100;
   }
 
-/*Navigation bar*/
-
-
-.navbar a{
-color: white;
-text-decoration: none;
-padding: 15px;
-text-align: center;
-float: right;
-}
-
-.navbar a:hover, .dropdown:hover .dropdown-butn{
-   /*text-decoration: underline;*/
-   color: rgb(10, 87, 211);
-}
-
-
-/*dropdown*/
-.dropdown{
-    /*float: left;
-    overflow: hidden;*/
-    position: relative;
-    display: inline-block;
-
-}
-.navbar{
-    background-color: black;
-}
-
-.dropdown .dropdown-butn{
-    font-size: 16px;
-    border: none;
-    outline: none;
-    margin: 0;
-    padding: 15px;
-}
-
-.dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a{
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover{
-    background-color: #ddd;
-    display: flex;
-}
-
-.dropdown:hover .dropdown-content{
-    display: block;
-}
-
-/*School badge, name and motto*/
-h3 {
-    text-align: center;
-    color: whitesmoke;
-    text-shadow: 3px 3px 5px rgb(41, 10, 10);
-}
-
-.logo {
-    width: 50px;
-    height:auto;
-    margin-right: 10px;
-    align-items: center;
-
-}
-
-.text{
-    display: flex;
-    flex-direction: column;
-    vertical-align: middle;
-}
-
-.info{
-    display: flex;
-    align-items: center;
-}
-
-.name{
-    margin-bottom: 0;
-}
-
-.motto{
-    margin-top: 0;
-    color: whitesmoke;
-}
 
 /*Slider*/
 .transbox{
@@ -187,7 +249,6 @@ h3 {
 .footer{
     display: flex;
     justify-content: space-between;
-    background-color: rgb(207, 38, 38);
     color: white;
     padding: 20px;
 }
@@ -225,3 +286,56 @@ h3 {
     height: auto;
     text-align: center;
 }
+
+/*Academics Page
+Accordion*/
+.accordion{
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 20px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.active, .accordion:hover{
+    background-color: #ccc;
+}
+
+.panel{
+    padding: 0 20px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+}
+
+/*Academic
+content*/
+.level-container{
+    margin: 30px 30px;
+}
+
+.heading{
+    margin: 30px 30px;
+    margin-bottom: 10px;
+    margin-top:20px ;
+}
+
+.section-panel{
+    margin-bottom: 40px;
+}
+
+.first-heading{
+    margin: 50px 30px;
+}
+
+
+    
+
+
+
