--- a/style.css
+++ b/style.css
@@ -317,85 +317,55 @@ header, footer{
     height: auto;
     text-align: center;
 }
-.slider{
+/*.testimonials{
     width: 100%;
     height:500px;
     overflow: hidden;
-    background-color:lightgray;
+    background-color:white;
     text-align: center;
-    padding: 40px 20px;
-    
+    padding: 40px 20px;  
+}*/
+.slider {
+    position: relative;
+    width: 400%;
+    margin: auto;
+    overflow: hidden;
+    justify-content: center;
 }
-.slider h2{
-    font-weight: bold;
-}
-figure{
+/*figure{
     position: relative;
     left: 0;
     width: 400%;
-    animation: 10s flow infinite;
+    animation: 10s flow infinite;*/
     
     
-}
+
 .sliden{
-    height: 25%;
-    width: 25%;
-    float: left;
+    display: none;
+    width: 50%;
     border-radius: 10px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+    align-items: center; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 600px;
+    /*max-width: 600px;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 20px;*/
     background-color: #fff;
     margin: 20px 0;
-    
 }
-@keyframes flow{
-    0%{
-        left: 0;
-    }
-    10%{
-        left: 0;
-    }
-    20%{
-        left: -100%;
-    }
-    30%{
-        left: -100%;
-    }
-    40%{
-        left: -200%;
-    }
-    50%{
-        left: -200%;
-    }
-    55%{
-        left: -300%;
-    }
-    65%{
-        left: -300%;
-    }
-    75%{
-        left: -200%;
-    }
-    75%{
-        left: -100%;
-    }
-    85%{
-        left: -100%;
-    }
-    90%{
-        left: 0;
-    }
-    100%{
-        left: 0;
-    }
+.slider button{
+ 
+ background-color: #555;
+ transform: translatey(-50%);
+}
+.prev{
+    left: 0%;
+}
+.next{
+    right: 0%;
+}
 
-}
+
 .testimonial-content {
   font-size: 1rem;
   color: #555;
@@ -403,7 +373,7 @@ figure{
   font-style: italic;
 }
 .testimonial-author {
-    display: flex;
+    /*display: flex;*/
     align-items: center;
     margin-top: 10px;
   }
@@ -633,6 +603,6 @@ content*/
   button:hover{
     background-color: rgba(0, 128, 0, 0.849);
   }
-
+  
 
 
