--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
 body{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 header, footer{
@@ -156,14 +157,14 @@ header, footer{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 600px;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover-img{
     height: 600px;
-    width: 100vw;
+    width: 100%;
     display: block;
     object-fit: cover;
     
@@ -298,9 +299,22 @@ Accordion*/
     text-align: left;
     border: none;
     outline: none;
+    font-size: 15px;
     transition: 0.4s;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.accordion i {
+    margin-left: 25px;
+    padding-right: 10px;
+    color: #777;
+    float: right;
+    transition: transform 0.3s;
+}
+
+.accordion.active i{
+    transform: rotate(180deg);
 }
 
 .active, .accordion:hover{
@@ -310,8 +324,9 @@ Accordion*/
 .panel{
     padding: 0 20px;
     background-color: white;
-    display: none;
+    max-height: 0;
     overflow: hidden;
+    transition: max-height 0.3s ease-out;
 }
 
 /*Academic
@@ -326,12 +341,51 @@ content*/
     margin-top:20px ;
 }
 
-.section-panel{
+.section-panel {
     margin-bottom: 40px;
 }
 
-.first-heading{
+.first-heading {
     margin: 50px 30px;
+}
+
+/*Dynamic Table*/
+form {
+    width: 500px;
+    margin: 20px auto;
+}
+
+.form-container{
+    gap: 10px;
+    display: flex;
+    
+    
+}
+
+.table-container{
+    width: 600px;
+    display: flex;
+    justify-content: space-around;
+}
+
+table {
+     border-collapse: collapse;
+     text-align: left;
+     margin: 10px auto;
+}
+
+table td, table th {
+    border: solid 1px black;
+    padding: 10px;
+}
+
+label, input {
+    display: block;
+    font-size: 20px;
+}
+
+button {
+    display: block
 }
 
 
