--- a/contact.css
+++ b/contact.css
@@ -153,25 +153,6 @@
   }
 
   /*ABOUT US CSS*/
-/*.ttl{
-    background-image:url(Images/picture4.jpg)  ;
-    background-size:cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    text-align:left;
-    padding: 40px 10px;
-    font-size: 2em;
-    font-weight: bold;
-    width: 100%;
-    height: 100%;
-    
-}
-.ttl::before{
-    background: rgba(0, 0, 0, 0.7);
-}*/
-
-
-
 .history {
     background-color: white;
     padding: 30px;
@@ -246,4 +227,26 @@
 
 .justify{
     text-align: justify;
+}
+
+.about-table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.about-table th, .about-table td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+
+.about-table th {
+    background-color: #f2f2f2;
+}
+
+.abt-content{
+        margin-top: 40px;
+        margin-bottom: 40px;
+        overflow: hidden;
+    
 }
