--- a/style.css
+++ b/style.css
@@ -840,19 +840,23 @@ body {
     flex-direction: column;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    background-color: #555;
-    color: #fff;
+    margin-bottom: 20px;
+ 
   }
 
-  .news-form{
-    width: 700px;
+  /*.news-form{
+   text-align: center;
+    padding: 50px 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 10px ;
+  }
+
+  /*width: 700px;
     height: auto;
     margin:auto;
     padding: 20px;
     background:rgba(136, 131, 131, 0.61);
     border-radius: 8px;
-    box-shadow: 0 4px 10px ;
-  }
 
   .news-form label{
     display: inline-block;
@@ -864,7 +868,7 @@ body {
     padding: 10px;
     border: 1px solid;
     border-radius: 5px;
-  }
+  }*/
 
   #mysubmit{
     width: 100Px;
