--- a/contact.css
+++ b/contact.css
@@ -114,7 +114,8 @@
     position: relative;
     width: 100%;
     min-height: 450px;
-    background-color:gray;
+    background-color: #f0f0f0;
+    margin-bottom: 50px;
 }
 .slider .slid{
     width: 70%;
@@ -254,25 +255,6 @@
     }
 }
   /*ABOUT US CSS*/
-/*.ttl{
-    background-image:url(Images/picture4.jpg)  ;
-    background-size:cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    text-align:left;
-    padding: 40px 10px;
-    font-size: 2em;
-    font-weight: bold;
-    width: 100%;
-    height: 100%;
-    
-}
-.ttl::before{
-    background: rgba(0, 0, 0, 0.7);
-}*/
-
-
-
 .history {
     background-color: white;
     padding: 30px;
