Tried to work on the burger menu

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header, footer{
 }
 
 
-/*Navigation bar*/
+/*Navigation bar
 .navbar{
     padding: 0 !important;
     height: 90px !important;
@@ -144,7 +144,7 @@ header, footer{
             flex-direction: column;
             align-items: center;
         }
-    }
+    }*/
     
    
    /*Transition*/ 
