--- a/responsive.css
+++ b/responsive.css
@@ -39,29 +39,39 @@ h1, h2, h3 {
 
 /* Navbar styles */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+    padding: 0;
+    height: 90px;
+    position: relative;
+    z-index: 1000 ;
+    color: white
 }
 
 .navbar ul {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    /*gap: 20px;
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 0;*/
 }
 
 .navbar ul li {
     font-size: 1.2rem;
 }
 
+.navbar ul li a:hover{
+    color: white;
+    display: inline-block;
+}
+
 .navbar ul li a {
     text-decoration: none;
-    color: #000;
+    color: #E5E4E2;
     font-weight: 600;
-    padding: 5px 10px;
+    padding: 15px;
+    text-align: center;
+    float: right;
     display: block;
 }
 
